--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My places</title>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="description" content="Presenting castels in a nice manner for people on there phones.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" type="text/css" href="style.css">
+
+        <title>My places</title>
     </head>
     <body>
         <div id="container"/>
